--- a/package.json
+++ b/package.json
@@ -12,19 +12,21 @@
   },
   "private": true,
   "dependencies": {
-    "typescript": "~3.9.5",
-    "@angular/cli": "~10.0.8",
-    "@angular/compiler-cli": "~10.0.14",
     "@angular/animations": "~10.0.14",
+    "@angular/cli": "~10.0.8",
     "@angular/common": "~10.0.14",
     "@angular/compiler": "~10.0.14",
+    "@angular/compiler-cli": "~10.0.14",
     "@angular/core": "~10.0.14",
     "@angular/forms": "~10.0.14",
     "@angular/platform-browser": "~10.0.14",
     "@angular/platform-browser-dynamic": "~10.0.14",
     "@angular/router": "~10.0.14",
+    "express": "^4.17.1",
+    "path": "^0.12.7",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
+    "typescript": "~3.9.5",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
